# disperse-collect

./: .gitignore  README.md  foundry.toml  hardhat.config.js  package-lock.json
rust-api/: Cargo.toml  Dockerfile  Procfile
rust-api/src/: main.rs
script/: DisperseCollectScript.s.sol
src/: DisperseCollect.sol  MockERC20.sol
test/: DisperseCollect.js  DisperseCollect.t.sol
