[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = "2"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
schemars = "0.8.6"
